--- a/document/03-musical-parameters.Rmd
+++ b/document/03-musical-parameters.Rmd
@@ -47,7 +47,7 @@ Using this logic, I then create a new compendium of melodic incipits, sorted by 
 
 Returning to melodies from Figures \@ref(fig:musicalpuzzleA) and \@ref(fig:musicalpuzzleB) from above, an aural skills pedagogue most likely has an intuition to which of the two melodies would be easier to dictate.
 Melody \@ref(fig:musicalpuzzleA) exhibits a predictable melodic syntax and phrase structure, the chromatic notes resolve within the conventions of the Common Practice period, and the melody itself could be scored with tertian harmony.
-On the other hand, Melody \@ref(fig:musicalpuzzleB)'s syntax does not conform to the conventions of the Common Practice period and does not imply any sort of underlying harmony or predictiable phrase rhythm.
+On the other hand, Melody \@ref(fig:musicalpuzzleB)'s syntax does not conform to the conventions of the Common Practice period and does not imply any sort of underlying harmony or predictable phrase rhythm.
 The duration of the rhythms appear irregular and the melody implies an uneven phrase structure.
 Yet both melodies \@ref(fig:musicalpuzzleA) and \@ref(fig:musicalpuzzleB) have the exact same set of notes and rhythms.
 Despite these content similarities, it would be safe to assume that melody \@ref(fig:musicalpuzzleA) is probably much easier to dictate than melody \@ref(fig:musicalpuzzleB) assuming both were to be played in a similar fashion. 
@@ -210,7 +210,7 @@ knitr::include_graphics("img/difficulty_plot.png")
 ```
 
 From Figure \@ref(fig:diffplot), there is an increasing linear trend from ratings of melodies being less difficult to more difficult across the sample.
-Using an intraclass coefficient calculation of agreement using a two-way model (both melodies and raters treated as random effects), the sample reflects an interclass correlation coefficeint of .79.
+Using an intraclass coefficient calculation of agreement using a two-way model (both melodies and raters treated as random effects), the sample reflects an interclass correlation coefficient of .79.
 According to @kooGuidelineSelectingReporting2016, this reflects a good degree of agreement between raters. 
 This trend across the sample appears in the opposite direction when plotting the mean values to the fourth question in Figure \@ref(fig:grammarplot) from the survey reflecting the melody's adherence to the melodic grammar of the Common Practice period. 
 
@@ -219,7 +219,7 @@ knitr::include_graphics("img/grammar_plot.png")
 ```
 
 While similar trends appear here, yet in the opposite direction as expected, there is a clear breaking of linear trend in the far right potion of the graph that shows melodies that were sampled from the chapter of the corpus that contains atonal melodies.
-Using an intraclass coefficient calculation of agreement using a two-way model, with melodies and raters treated as random effects, the sample reflects an interclass coeffiecent of .65, which according to @kooGuidelineSelectingReporting2016 indicates a moderate degree of agreement among raters.
+Using an intraclass coefficient calculation of agreement using a two-way model, with melodies and raters treated as random effects, the sample reflects an interclass coefficient of .65, which according to @kooGuidelineSelectingReporting2016 indicates a moderate degree of agreement among raters.
 This lower agreement rating is most likely due to the subjectiveness of this question.
 In their free text responses, many participants expressed difficulty in surmising what this meant.
 
@@ -306,12 +306,11 @@ Just like summarizing the range of a melody by subtracting the distance between 
 In computational musicology, features of melodies can generally be classified into two main types: static and dynamic features.
 Static features compute a summary measure over the entire melody while dynamic features calculate values for each event onset in a melody.
 One of the most complete set of static computational measures as applied to music perception come from Daniel Müllensiefen's' Feature ANalysis Technology Accessing STatistics (In a Corpus) or FANTASTIC toolbox [@mullensiefenFantasticFeatureANalysis2009].
-According to FANTASTIC's technical report, 
 
 > "FANTASTIC is a program...that analyzes melodies by computing features. The aim is to characterise a melody or a melodic phrase by a set of numerical or categorical values reflecting different aspects of musical structure. This feature representation of melodies can then be applied in Music Information Retrieval algorithms or computational models of melody cognition." (pp. 4)
 
 Drawing from fields both central and peripheral to music science, FANTASTIC computes a collection of 38 features to analyze features of melodies and joined a large and continuing tradition of analyzing music computationally [@lomaxCantometricsApproachAnthropology1977 ;@eerolaExpectancySamiYoiks2009; @huronHumdrumToolkitReference1994; @lartillotMatlabToolboxMusical2007; @lomaxCantometricsApproachAnthropology1977; @mcfeeLibrosaAudioMusic2015; @steinbeckStrukturUndAhnlichkeit1982].
-Additionally, FANTASATIC also provides a framework for comparing the features of a melody with a parent corpus from which the melody is assumed to belong similar to a sample-population relationship.
+Additionally, FANTASTIC also provides a framework for comparing the features of a melody with a parent corpus from which the melody is assumed to belong similar to a sample-population relationship.
 
 ### Back to the Classroom
 
@@ -331,7 +330,7 @@ From Figure \@ref(fig:corfeature) and Table \@ref(fig:corfeaturetable), there ar
 The top five features that correlate most strongly with the expert ground truths are related to the intervallic content of a melody.
 The first two features, ```i.abs.std``` and ```i.abs.mean``` are derived measures using absolute interval distance computations.
 The other top three features, ```step.cont.loc.var```, ```i.entropy```, and ```p.entroy``` are related to entropy measures. 
-Of the negatively correlated features, two linguistically derived measures ```mean.Yules.K``` and ```mean.Simpsons.D``` both correlate with perceived difficulty, as does a measure of ```tonalnesss``` which in FANTASTIC is based on the Krumhansl key profiles [@krumhanslCognitiveFoundationsMusical2001].
+Of the negatively correlated features, two linguistically derived measures ```mean.Yules.K``` and ```mean.Simpsons.D``` both correlate with perceived difficulty, as does a measure of ```tonalness``` which in FANTASTIC is based on the Krumhansl key profiles [@krumhanslCognitiveFoundationsMusical2001].
 
 One problem in tackling this problem is that although many of these variables correlate strongly with our target variables-- both grammar and difficulty ratings-- one aspect not apparent in this analysis is the correlation between each of the features. 
 In order to demonstrate this, in Figure \@ref(fig:featurecorrelations) I visualize how a sample of features from the FANTASTIC toolbox correlate with one another with mode additionally included to highlight the breakdown of the corpus. 
@@ -353,15 +352,15 @@ Another method, as mentioned above, could instead take a more exhaustive, but le
 knitr::include_graphics("img/univariate_cow.png")
 ```
 
-In Figure \@ref(fig:univariatecow), I plot eight features extracted via the FANASTIC Toolbox.
-The figure plots linear models of each feature compared against the expert ratings of difficuty. 
-I additionally list the Pearson correlation coeffecient for each model.
+In Figure \@ref(fig:univariatecow), I plot eight features extracted via the FANTASTIC Toolbox.
+The figure plots linear models of each feature compared against the expert ratings of difficulty. 
+I additionally list the Pearson correlation coefficient for each model.
 From the plot, it is evident that some features correlate much stronger with the ground truth features than others.
 For example, ```pitch.entropy``` correlates with the ground truth data $r = .84$.
 Not only that, but the model is not being driven completely by outliers.
 While some points fall below the regression line, extreme values are not driving this effect. 
-A similarly strong relatioship is evident with the ```step.cont.local.var``` variable.
-In line with work by Dowling, this provides further evidence that countour changes have a significant impact on how people hear melodies [@dowlingScaleContourTwo1978].
+A similarly strong relationship is evident with the ```step.cont.local.var``` variable.
+In line with work by Dowling, this provides further evidence that contour changes have a significant impact on how people hear melodies [@dowlingScaleContourTwo1978].
 In exploring these relationships in multivariate context, when I combined the top four variables from \@ref(fig:univariatecow) in a linear multiple regression model, the model was able to predict a high degree of variance $F(4,15) = 30.47, p < .05, R^2 = .89$.
 While this model is explicitly exploratory, this dataset will serve as a foundation to build future theories to test.
 
@@ -473,7 +472,7 @@ To visualize what this might look like in a melodic dictation context, we could 
 If quantified using information content measures, these five grams would then fill up the finite bin of memory faster than five grams that were more unexpected, or had more information content associated with them.
 I visualize this difference in Figure \@ref(fig:cumplot) where I plot similar lengths of five grams filling up the window of memory at different rates based on their cumulative information content. 
 
-```{r cumplot, echo=FALSE, fig.cap="Cumlative Information Content in Melodic Incipts",fig.align='center', out.width="100%"}
+```{r cumplot, echo=FALSE, fig.cap="Cumulative Information Content in Melodic Incipts",fig.align='center', out.width="100%"}
 knitr::include_graphics("img/cum_grid_plot.png")
 ```
 
@@ -522,11 +521,11 @@ Another important caveat in the corpus analysis above is it was done using fixed
 
 In this chapter, I demonstrated how tools from computational musicology can be used as an aide in aural skills pedagogy.
 After first establishing the extent to which aural skills pedagogues agree on various melody parameters, I then show how two types of computationally derived features can stand in for a pedagogues intuition.
-First, using the FANTASTIC toolbox, I show how static abstracted features can help explain how theorists conceceptualize complexity.
+First, using the FANTASTIC toolbox, I show how static abstracted features can help explain how theorists conceptualize complexity.
 This first will help with selection of melodies and also provides insights as to which features of the melodies contribute most to perceived difficulty.
 Second, I demonstrated how assumptions derived from the IDyOM framework can serve as a basis for the intuitions of why smaller sequences of notes within melodies are more or less difficult to dictate.
-Using the logic that sequences that are easier to process are more expected and thus could plausbibly tax memory less than are more difficult to process.
-I relate this to the classrom by asserting that students could then take a melodic incipt approach to learning to dictate.
+Using the logic that sequences that are easier to process are more expected and thus could plausibly tax memory less than are more difficult to process.
+I relate this to the classroom by asserting that students could then take a melodic incipt approach to learning to dictate.
 I argued that using this smaller incipit based approach will allow students to not be overwhelmed in their learning by taking a more linear path to dictation, before moving on to more more ecologically valid melodies.
 
 
