--- a/document/02-individual-parameters.Rmd
+++ b/document/02-individual-parameters.Rmd
@@ -61,8 +61,8 @@ This inability to measure musical exposure additionally complicates controlling 
 When measured continuously using paradigms that require immediate recall and judgment, musical training does often predict memory for musical materials.
 
 Using a stepwise modeling procedure, @harrisonModellingMelodicDiscrimination2016 consistently found evidence that musical training was a significant predictor of ability to perform well on a melodic discrimination task when developing an item response theory based test of melodic memory. 
-Using regression modeling, Harrison et. al reported to be able to explain a large amount of the variance ($R^2 = 0.46$) when reporting response variability in a melodic discrimination task [@harrisonApplyingModernPsychometric2017a] when measuring musical training via the Goldsmith's Musical Sophistication Index [@mullensiefenMusicalityNonMusiciansIndex2014].
-@bakerPerceptionLeitmotivesRichard2017 found musical training, when measured continuously, was able to be a significant predictor of sucessfull identification of musical material using a exposure-recall paradigm within a set of other predictor variables including participant's familiarity with the music and item level predictors.
+Using regression modeling, Harrison et. al reported to be able to explain a large amount of the variance ($R^2 = 0.46$) when reporting response variability in a melodic discrimination task [@harrisonApplyingModernPsychometric2017a] when measuring musical training via the Goldsmiths Musical Sophistication Index [@mullensiefenMusicalityNonMusiciansIndex2014].
+@bakerPerceptionLeitmotivesRichard2017 found musical training, when measured continuously, was able to be a significant predictor of successful identification of musical material using a exposure-recall paradigm within a set of other predictor variables including participant's familiarity with the music and item level predictors.
 
 Even despite mixed evidence suggesting different effects of musical training on an individual's ability to remember melodies, it is important to note that these studies do not specifically deal with melodic dictation, and thus cannot be used as a perfect comparison for a number of reasons.
 The first is that melodic dictation is a much more complicated process that not only involves hearing a melody after a few iterations, but also its notation.
@@ -145,7 +145,7 @@ Finally, in response to claims made by  @okadaIndividualDifferencesMusical2018, 
 ### Structural Equation Modeling
 
 Given the complex nature being investigated and the theoretical concepts at play such as working memory, general fluid intelligence, and musical sophistication conceptualized as a latent variable, it follows that the most appropriate method of parsing out the variance in this covariance structure would be to use some form of structural equation modeling [@beaujeanLatentVariableModeling2014].
-Structural equation modeling uses latent variables-- theoretical constructs thought to exist, yet are not possible to measure directly-- by taking advantages of algerbraic systems originally developed by Sewall Wright [@wrightMethodPathCoefficents1934].
+Structural equation modeling uses latent variables-- theoretical constructs thought to exist, yet are not possible to measure directly-- by taking advantages of algebraic systems originally developed by Sewall Wright [@wrightMethodPathCoefficents1934].
 When used under the right conditions, the technique is powerful enough to determine causal mechanisms in closed systems [@pearlBookWhyNew2018], but this is not the case in this analysis. 
 
 ### Hypotheses
@@ -156,7 +156,7 @@ Following a step-wise procedure, these sets of analyses will provide a way to in
 
 Given a robust instrument for measuring musicality, and two well established cognitive measures as specifically defined below, this analysis seeks to investigate the degree to which these individual level variables are predictive of a task that is proxy to the first two steps of melodic dictation.
 If a large proportion of the variance of musical memory can be attributed to training, then variables related to the Goldsmiths Musical Sophistication Index should be most predictive with the highest path coefficients and lead to the best model fit.
-If instead cognitive factors do play a role, this should be evident in the path coeffecients.
+If instead cognitive factors do play a role, this should be evident in the path coefficients.
 
 ## Overview of Experiment
 
@@ -383,8 +383,8 @@ It was not until the self-report measures were removed from the model, and then 
 Fitting the model with only the cognitive measures, I was able to enter the bounds of acceptable relative fit indices that were noted above. 
 In order to find evidence that the cognitive models (Models 3 and 4) were indeed a better fit than using the General factor, I additionally ran a comparison between our adjusted measurement model and a model with only the self-report.
 While both of the nested models were significantly different, the cognitive models exhibited superior relative fit indices.
-Lastly, turning to \@ref(fig:model4), I note that the latent variable of working memory capacity exhibited much larger path coeffecient predicting the two objective, perceptual tests than our measure of general fluid intelligence. 
-I also note that the path coeffeceent predicting the Beat Perception task ($r$ =.36) was higher than that of the Melodic Memory task ($r$ = .21). 
+Lastly, turning to \@ref(fig:model4), I note that the latent variable of working memory capacity exhibited much larger path coefficient predicting the two objective, perceptual tests than our measure of general fluid intelligence. 
+I also note that the path coefficients predicting the Beat Perception task ($r$ =.36) was higher than that of the Melodic Memory task ($r$ = .21). 
 These rankings mirror that of the original [@mullensiefenMusicalityNonMusiciansIndex2014] paper and merit further examination in order to disentangle what processes are contributing to both tasks.
 
 Given the results here that suggest that measures of cognitive ability play a significant role in tasks of musical perception, my analysis suggests that future research should consider taking measures of cognitive ability into account, so that other variables of interest are able to be shown to contribute above and beyond baseline cognitive measures.
@@ -409,7 +409,7 @@ The second is that general fluid intelligence is designed to measure abilities o
 General fluid intelligence might be helpful at later stages of cognitive processing such as the musical understanding and notation phases of the Karpinski model, but their effect does not seem to be present here. 
 
 From a pedagogical standpoint, this is important in that many teachers are aware that students will vary in terms of their working memory ability.
-While it might be tempting to pathologize cognitive predictors deemed relevant in these contexts, further work specifically looking the load on memory is needed before claims are made about incoporating this as a way to diagnose problems with student performance.
+While it might be tempting to pathologize cognitive predictors deemed relevant in these contexts, further work specifically looking the load on memory is needed before claims are made about incorporating this as a way to diagnose problems with student performance.
 One practical consideration for the classroom within the Karpinski framework that could be put forward would be to encourage students to listen for smaller chunks when using extractive listening.
 Using a Cowan's model of working memory, students should extract smaller chunks so that they still have cognitive resources available in order to focus on the later stages of the Karpinski model (musical understanding and notation).
 As attention is limited, not listening to more than you can hold will free up cognitive resources that might later be used in melodic dictation.
