--- a/document/04-corpus.Rmd
+++ b/document/04-corpus.Rmd
@@ -24,9 +24,9 @@ I end by highlighting important considerations in the underlying representations
 The use of computers to study music has been been ongoing for over the past fifty years.
 As reviewed by @hewlettComputingMusicology1991, early approaches to using computers in music research began in the mid 1960s and due to the high effort and cost of computation, projects pursued by researchers at this time tended to focus on questions that might have global relevance.
 The use of computers to study music at this time was not by any means a sparse area of study and throughout the second half of the 20th century, research in computational musicology grew in relation to the computing abilities afforded by the available technologies [@nettheimBibliographyStatisticalApplications1997].
-During this time, not only was there progress made on computing power, but during this time many new digitial music encoding frameworks were created.
+During this time, not only was there progress made on computing power, but during this time many new digital music encoding frameworks were created.
 As discussed by @wigginsFrameworkEvaluationMusic1993, the design and development of these encoding frameworks has impact on the degree that the systems can be assessed.
-According to Wiggins and colleagues, a musical, digitial encoding framework can be evaluated on the two orthogonal dimensions of expressive completeness and structural generality. 
+According to Wiggins and colleagues, a musical, digital encoding framework can be evaluated on the two orthogonal dimensions of expressive completeness and structural generality. 
 Considering how a system is developed in order to encode encode musical information then becomes paramount given that the level of granularity of encoding data will determine the types of questions that could eventually be asked in a computational analysis.
 For example, data encoded in MIDI or CHARM format is able to store micro-time variations in performance practice, which lends itself to the ability to do performance based analyses on this data.
 If this data were instead to have been encoded using a frequency spectrum as would be stored in an MP3 or WAV file, this type of analysis could not be carried out as accurately due to the task of automating the detection of pitch onsets.
@@ -34,7 +34,7 @@ If this data were instead to have been encoded using a frequency spectrum as wou
 On a higher level of abstraction, this problem of how to encode a melody becomes exacerbated when considering meta-research issues such as the the tools-to-theories heuristic put forward by Gigerenzer [@gigerenzerToolsTheoriesHeuristic1991].
 Gigerenzer claims that much of both the novelty and authority given to the trajectory of a research path is determined by the tools a group decides is valid and not the generation of new data or theories.
 Contextualizing this problem for digital music encoding, again choosing how to represent the data reflects ontological and epistemological assumptions about the data itself.
-Not only does committing to an encoding system come with the inevitable elimination of important musical features, but over time the establshing of canonical assumptions about the nature of methods might lead to researchers choosing questions and methods based on the convience of answering those questions, rather than committment to the question itself. 
+Not only does committing to an encoding system come with the inevitable elimination of important musical features, but over time the establishing of canonical assumptions about the nature of methods might lead to researchers choosing questions and methods based on the convenience of answering those questions, rather than commitment to the question itself. 
 This type of problem would only be exacerbated in high pressure, performance based research environments. 
 Further, the technology used to be able to query or test this data would provide an additional constraint on the analysis.
 
@@ -96,7 +96,7 @@ This assumption is furthered when analyses are done using the null hypothesis si
 If researchers then adopt this underlying assumption, it should then follow that in order to continually find support for these theories and hypotheses, new evidence should be put forward that uses a similar population, but with different samples.
 Doing so would require the creation of new samples from a parent population, very much akin to the _MeloSol_ corpus.
 Like the _Essen_, the _MeloSol_ corpus contains melodies in the Western, tonal tradition constrained by vocal performance.
-Alternatively, researchers could adopt different research epistemologies other than a general Frequentist approach, such as using Bayesian or Liklihood methods that do not assume a sample-population relationship, but rather take the data as the model itself.
+Alternatively, researchers could adopt different research epistemologies other than a general Frequentist approach, such as using Bayesian or Likelihood methods that do not assume a sample-population relationship, but rather take the data as the model itself.
 Regardless of what methodology is chosen, providing more evidence for previous claims depends on, as noted above, finding new evidence for old claims with new data. 
 
 ### Corpus Analysis
@@ -160,19 +160,19 @@ If this is true, considering how to reproduce findings in a meaningful way is im
 If true, the community would be able to continue doing analyses such as that of @huronMelodicArchWestern1996, but then needs to consider such a claim could replicate.
 
 Huron later addressed this issue [@huronVirtuousVexatiousAge2013] suggesting that the proliferation of "Big Data" will eventually lead computational musicology to an "ironic" state where statistical inference tools are no longer applicable because researchers will have access to an entire population.
-This assertion again implicitly assumes the Frequentist epistomological framework of samples and population, but Frequentism is not the only framework availible to the empirical research community [@dienesUnderstandingPsychologyScience2008].
+This assertion again implicitly assumes the Frequentist epistemological framework of samples and population, but Frequentism is not the only framework available to the empirical research community [@dienesUnderstandingPsychologyScience2008].
 It is my assertion that these assumptions are yet to be made explicit in computational music analyses.
 
 For example, studies such as @frielerTellingStoryDramaturgy2016 fit a series of models on solos from a jazz corpus.
 The solos are taken to represent the larger population of Jazz and the authors further subdivide the Jazz into its various genre divisions such as post-bop, traditional, and cool.
 While Jazz might be the population and the genre divisions to be sub-populations, each solo is then further sampled from an individual.
-In this case, most of the invididuals represented in their corpus are deceased, thus theoretically making the population exhaustive and theoretically accessible.
+In this case, many of the individuals represented in their corpus are deceased, thus theoretically making the population exhaustive and theoretically accessible.
 At this point, practically replicating these results would either depend on finding undiscovered archive recordings or the generation of new material based on estimating parameter values of a style in order to recreate new stimuli following in the example of the music generation literature. 
 For example, @sturmTakingModelsBack2017 developed an artificial intelligence using deep learning to create folk songs based on 30,000 transcriptions.
 As discussed in follow up work [@sturmMachineLearningResearch2019], this research brings with it implications and assumptions about the state of a musical style.
-If a population is limited by time, presumably all data will follow the path that Huron predicted and lead us to an "ironic" state of population hermenutics.
+If a population is limited by time, presumably all data will follow the path that Huron predicted and lead us to an "ironic" state of population hermeneutics.
 If populations are not bound by time, the field of computational musicology needs to consider adopting other frameworks to situate itself.
-Further, future work might consider if accessing the population parameters is the end research goal in quesiton.
+Further, future work might consider if accessing the population parameters is the end research goal in question.
 Questions of style analysis seek to generalize beyond a population so new works might created.
 Regardless of the choice, future work from this should make this clear. 
 
